# GameServer

./: README.md
code/EVA/server/: CMakeLists.txt  _shard_start.bat  _shard_stop.bat  admin_executor_service.cfg  common.cfg  frontend_service.cfg  game_service.cfg  logger_service.cfg  naming_service.cfg  persistant_data_service.cfg  persistent_service.cfg  player_logic_service.cfg  schedule_service.cfg  shard.screen.rc  web_service.cfg
code/EVA/server/admin_modules/: CMakeLists.txt  admin_modules_itf.h  aes_module.cpp  as_module.cpp
code/EVA/server/admin_service/: CMakeLists.txt
code/EVA/server/config/i18n/: cn.uxt  en.uxt
code/EVA/server/config/json_table/: create_role_config.json  fes_message.json  item_config.json  mission_config.json  room_config.json  room_consume_config.json  statistics_config.json
code/EVA/server/frontend_service/: CMakeLists.txt  client.cpp  client.h  client_functor.h  client_manager.cpp  client_manager.h  client_timer.cpp  client_timer.h  frontend_def.cpp  frontend_def.h  frontend_message.cpp  frontend_message.h  frontend_network.cpp  frontend_network.h  frontend_service.cpp  frontend_service.h  frontend_service_command.h
code/EVA/server/frontend_service/rudp/: reciver_adapter.cpp  reciver_adapter.h  reciver_thread.cpp  reciver_thread.h  rudp_connection.cpp  rudp_connection.h  rudp_interface.h  rudp_listen_handler.cpp  rudp_listen_handler.h  rudp_msg_processor.cpp  rudp_msg_processor.h  rudp_wrapper.h  udp_handler.cpp  udp_handler.h
code/EVA/server/game_service/: CMakeLists.txt
code/EVA/server/game_service/event/: event_define.h  event_dot_callback.cpp  event_dot_callback.h  event_mission_callback.cpp  event_mission_callback.h  event_player_callback.cpp  event_player_callback.h  event_register.cpp  event_register.h  event_room_callback.cpp  event_room_callback.h  event_statistics_callback.cpp  event_statistics_callback.h
code/EVA/server/game_service/game_manager/: game_base.cpp  game_base.h  game_manager.cpp  game_manager.h  game_register.cpp  game_register.h  game_timer.cpp  game_timer.h
code/EVA/server/game_service/game_service/: game_service.cpp  game_service.h  game_service_command.h  game_service_def.h
code/EVA/server/game_service/item/: item.h  item_manager.cpp  item_manager.h
code/EVA/server/game_service/message/: message_item.h  message_login.cpp  message_login.h  message_match.h  message_mission.h  message_room.cpp  message_room.h  message_service.cpp  message_service.h  message_statistics.h
code/EVA/server/game_service/mission/: mission.h  mission_manager.cpp  mission_manager.h
code/EVA/server/game_service/player/: player.cpp  player.h  player_manager.cpp  player_manager.h
code/EVA/server/game_service/redis/: redis.cpp  redis.h
code/EVA/server/game_service/room/: room_base.cpp  room_base.h  room_factory.h  room_manager.cpp  room_manager.h  room_register.cpp  room_register.h  room_timer.cpp  room_timer.h
code/EVA/server/game_service/statistics/: statistics.h  statistics_manager.cpp  statistics_manager.h
code/EVA/server/i18n/: cn.uxt
code/EVA/server/json_table/: fes_message.json
code/EVA/server/logger_service/: CMakeLists.txt
code/EVA/server/logger_service/db/: db_connect.cpp  db_connect.h  db_sub_func.cpp  db_sub_func.h
code/EVA/server/logger_service/logger_service/: logger_service.cpp  logger_service.h  logger_service_def.h
code/EVA/server/logger_service/message/: message_db_event.cpp  message_db_event.h  message_service.cpp  message_service.h
code/EVA/server/naming_service/: CMakeLists.txt  naming_service.cpp
code/EVA/server/persistent_service/: CMakeLists.txt
code/EVA/server/persistent_service/db/: db_connect.cpp  db_connect.h  db_main_func.cpp  db_main_func.h  db_manager.cpp  db_manager.h  db_sub_func.cpp  db_sub_func.h  db_worker.cpp  db_worker.h
code/EVA/server/persistent_service/login/: login_user.cpp  login_user.h
code/EVA/server/persistent_service/message/: message_db_event.cpp  message_db_event.h  message_login.cpp  message_login.h  message_service.cpp  message_service.h
code/EVA/server/persistent_service/persistent_service/: persistent_service.cpp  persistent_service.h  persistent_service_command.h  persistent_service_def.h
code/EVA/server/persistent_service/player/: player.h  player_manager.cpp  player_manager.h
code/EVA/server/schedule_service/: CMakeLists.txt  schedule_def.h  schedule_service.cpp  schedule_service.h
code/EVA/server/schedule_service/Login/: login_user.cpp  login_user.h
code/EVA/server/schedule_service/Message/: message_login.cpp  message_login.h  message_room.cpp  message_service.cpp  message_service.h
code/EVA/server/schedule_service/Player/: player.cpp  player.h  player_manager.cpp  player_manager.h
code/EVA/server/schedule_service/Room/: room_manager.cpp  room_manager.h
code/EVA/server/schedule_service/game/: game.h  game_manager.cpp  game_manager.h  game_timer.h
code/EVA/server/schedule_service/login/: login_user.cpp  login_user.h
code/EVA/server/schedule_service/match/: match_manager.h  match_mode.cpp  match_mode.h  match_timer.h
code/EVA/server/schedule_service/message/: message_game.cpp  message_game.h  message_login.cpp  message_login.h  message_match.h  message_room.cpp  message_room.h  message_service.cpp  message_service.h
code/EVA/server/schedule_service/player/: player.cpp  player.h  player_manager.cpp  player_manager.h
code/EVA/server/schedule_service/schedule_service/: schedule_service.cpp  schedule_service.h  schedule_service_command.h  schedule_service_def.h
code/EVA/server/server_share/: CMakeLists.txt
code/EVA/server/web_service/: CMakeLists.txt
code/EVA/tools/cdkey_gen/: CMakeLists.txt  cdkey.sql  cdkey.txt  cdkey_gen.cfg  main.cpp
code/EVA/tools/robot/: CClient.cpp  CClient.h  CClientMgr.cpp  CClientMgr.h  CCommonLine.cpp  CCommonLine.h  CConnect.cpp  CConnect.h  CMakeLists.txt  CRobotHelper.h  CRobotName.cpp  CRobotName.h  CRobotServer.cpp  CRobotServer.h  CRobotTimer.cpp  CRobotTimer.h  msg.xml  name.txt  robot_service.cfg  start_robot.bat  stop_robot.bat  surname.txt
code/EVA/tools/robot/msg/: recv_logic.h  (+3 more)
(+484 files in other folders)
