FILE(GLOB SRC *.cpp *.h)
FILE(GLOB SRC_RECV_MGR msg/*.h msg/*.cpp)
FILE(GLOB SRC_HTTP http/*.h http/*.cpp)
FILE(GLOB SRC_ROLE role/*.h role/*.cpp)
FILE(GLOB SRC_LUA  lua/*.h  lua/*.cpp)

FIND_PACKAGE(CURL)
ADD_DEFINITIONS(-DCURL_STATICLIB)

SOURCE_GROUP("Msg" FILES ${SRC_RECV_MGR})
SOURCE_GROUP("Http" FILES ${SRC_HTTP})
SOURCE_GROUP("Role" FILES ${SRC_ROLE})
SOURCE_GROUP("Lua" FILES ${SRC_LUA})

ADD_EXECUTABLE(robot WIN32 ${SRC} ${SRC_RECV_MGR} ${CURL_INCLUDE_DIR} ${SRC_HTTP} ${SRC_ROLE} ${SRC_LUA} )

INCLUDE_DIRECTORIES(${LUA_INCLUDE_DIR} ${TOLUA_INCLUDE_DIR} ${SERVER_INCLUDE})

TARGET_LINK_LIBRARIES(robot ${PROTOBUF_LIBRARIES} ${LIBXML2_LIBRARIES} ${CURL_LIBRARY} ${LUA_LIBRARIES} ${TOLUA_LIBRARIES}
							servershare
							nelmisc 
							nelnet
							eva_adminmodules)
							
NL_DEFAULT_PROPS(robot "EVA, Tools: Robot")
NL_ADD_RUNTIME_FLAGS(robot)

INSTALL(TARGETS robot RUNTIME DESTINATION sbin COMPONENT services)

